--- a/test.html
+++ b/test.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html>
+<body>
+<script>
+</script>
+</style>
+<div class="patterns">
+<svg width=100% height=100%>
+	<defs>
+		<pattern id="pattern" x=0 y=0 width="40" height="40"patternUnits="userSpaceOnUse" >
+        <polygon points="20 40,40 30,40 10,20 0,0 10,0 30" stroke="black" fill="transparent" stroke-width="1"/>
+    	</pattern>
+        <pattern id="pattern2" x=10 y=10 width="40" height="40" patternUnits="userSpaceOnUse">
+           <polygon points="10 20,20 15,20 5, 10 0,0 5,0 15" stroke="black" fill ="transparent" "black" stroke-width="1"/>
+        </pattern>
+      <pattern><polygon points = /></pattern>
+    </defs>    
+    <rect x="0" y="0" width="100%" height="100%" fill=url(#pattern) />
+    <rect x="0" y="0" width="100%" height="100%" fill=url(#pattern2) />
+</svg>
+</div>
